test/scc/type/semantic-errors/001.t
struct
{
    int a;
    struct
    {
        int b[];
    };
    int c;
};